- Follow up to int->Integer -1 check. - Update insecure package